public class Opcion extends Respuesta {

    public Opcion(String literal) {
        super(literal);
    }

}
