
public class Solucion extends Respuesta {

    public Solucion(String solucion) {
        super(solucion);
    }

}
